[package]
name = "opaque-ke-hybrid"
version = "0.1.0"
edition = "2024"
authors = ["Thomas <tom@unebaguette.fr>"]
description = "ML-KEM hybrid extension for opaque-ke"
repository = "https://github.com/UneBaguette/opaque-ke-hybrid"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["opaque", "pake", "ml-kem", "post-quantum", "hybrid"]
categories = ["cryptography", "authentication"]

[dependencies]
opaque-ke = { version = "4.0.1", features = ["ristretto255", "argon2"] }
ml-kem = "0.2"
# Pinned to match opaque-ke 4.0.1's ecosystem (hkdf 0.12, sha2 0.10)
# When opaque-ke 4.1.0 stabilizes, review native kem feature
hkdf = "0.13"
sha2 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
rand = "=0.8.6"

[features]
default = ["ristretto255"]
ristretto255 = ["opaque-ke/ristretto255"]